--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
   "name": "hotelmanagement",
-  "version": "latest",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "latest",
-    "@fortawesome/free-regular-svg-icons": "latest",
-    "@fortawesome/free-solid-svg-icons": "latest",
-    "@fortawesome/react-fontawesome": "latest",
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-regular-svg-icons": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-fontawesome": "^0.1.18",
     "@emotion/react": "latest",
     "@emotion/styled": "latest",
     "@material-ui/core": "lates",
     "@material-ui/icons": "latest",
     "@mui/material": "latest",
-    "@mui/x-date-pickers": "latest",
-    "@testing-library/jest-dom": "latest",
-    "@testing-library/react": "latest",
-    "@testing-library/user-event": "latest",
+    "@mui/x-date-pickers": "^5.0.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "date-fns": "latest",
     "dayjs": "latest",
-    "react": "latest",
-    "react-datepicker": "latest",
-    "react-dom": "latest",
-    "react-modal": "latest",
-    "react-scripts": "latest",
-    "web-vitals": "latest"
+    "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
+    "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
