--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "@material-ui/core": "lates",
     "@material-ui/icons": "latest",
     "@mui/material": "latest",
-    "@mui/x-date-pickers": "^5.0.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@mui/x-date-pickers": "latest",
+    "@testing-library/jest-dom": "latest",
+    "@testing-library/react": "latest",
+    "@testing-library/user-event": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "date-fns": "latest",
     "dayjs": "latest",
-    "react": "^18.2.0",
-    "react-datepicker": "^4.8.0",
-    "react-dom": "^18.2.0",
-    "react-modal": "^3.16.1",
-    "react-scripts": "5.0.1",
+    "react": "latest",
+    "react-datepicker": "latest",
+    "react-dom": "latest",
+    "react-modal": "latest",
+    "react-scripts": "latest",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
